# hihiton

./: .env.template  README.md  llm_requests.py  main.py  pyproject.toml  user_requests_parse.py
agents/report_agent/: tools.py
agents/utils/: llm.py
agents/web_search_agent/: agent.py  tools.py
frontend/: README.md  index.html  main.js  styles.css
pgvector/sql_queries/: banks.sql  products.sql
src/app/agents/user_requests_agent/: deepagent.py  plot.py  run.py
src/app/agents/web_search_agent/: agent.py  cron.py  run.py  tools.py
src/app/api/: api.py  models.py  router.py
src/app/api/telegram/: bot.py
src/app/api/web/: server.py
src/app/domain/: models.py
src/app/infra/embedder/: get_embedding.py
src/app/infra/llm/: client.py
src/app/pgvector/: docker-compose.yml
src/app/pgvector/init/: 01_schema.sql
src/app/resourses/: report.csv
src/app/tools/: data_processing_tools.py  data_processor.py  get_report.py  user_requests_parse.py  web_search_tools.py
