[project]
name = "hihiton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.2.5",
    "httpcore[http2]>=1.0.9",
    "fuzzywuzzy>=0.18.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langfuse>=3.10.1",
    "langgraph>=1.0.3",
    "loguru>=0.7.3",
    "mcp>=1.22.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.11",
    "python-dotenv>=1.2.1",
    "fastapi>=0.121.3",
    "aiogram==3.22",
]

[tool.uv.sources]
torch = { index = "aiogram" }

[[tool.uv.index]]
name = "aiogram"
url = "https://github.com/aio-libs/aiohttp/releases/download/v3.13.0/aiohttp-3.13.0-cp310-cp310-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl"
explicit = true
